--- a/TeamTreeHouse/ListRendering/index.html
+++ b/TeamTreeHouse/ListRendering/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Skimmit News 2</title>
-</head>
+  </head>
 <body>
   <div id="app" class="container">
     <h1>Skimmit News</h1>
@@ -29,7 +29,8 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"></script>
+
   <script src="app.js"></script>
 </body>
 </html>
