timeslot clean up

--- a/CIP/index.html
+++ b/CIP/index.html
@@ -45,12 +45,12 @@
                           <small> Please select an agreed ceremony start time, typically 5:15pm: </small>
                           <select id="wedding_time">
                             <option>Choose a timeslot...</option>
-                            <option v-for="timeslot in timeslots">{{timeslot.time}}</option>
+                            <option v-for="timeslot in timeslots">{{timeslot}}</option>
                           </select>
 
                       </div>
 
-
+<option v-for="b in bs">{{b}}</option>
 
                       <!--
                       <div id="reservation_form">
