--- a/CIP/index.html
+++ b/CIP/index.html
@@ -48,94 +48,16 @@
                             <option v-for="timeslot in timeslots">{{timeslot}}</option>
                           </select>
 
+
+                          <!-- if show_bricks -->
+
+                          <!-- list out extras -->
+
                       </div>
 
 
                       <!--
-                      <div id="reservation_form">
-                         <form action="/wedding_chapel_gazebo_banquet_hall_rental-process" method="post" onsubmit="if (!window.__cfRLUnblockHandlers) return false; MM_validateForm('bride_name','','R','groom_name','','R','bride_phone','','R','groom_phone','','R','extra_amount_txt','','NisNum','custom_deposit_txt','','NisNum');return document.MM_returnValue" autocomplete="off">
-                            <div id="elopement_section">
-                               <h3><a href="/elopement-small-wedding/">OPTION 1: Elopements / Small Private Wedding (Up to 25 Guests)</a></h3>
-                               <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
-                               Arrive 15 minutes before ceremony start time. Bridal dressing room is not available in this package. Includes chapel, gazebo, grounds, officiant services and gazebo chairs. A guest is considered anyone, regardless of age, including the bridal party, who attends the wedding that is not a vendor, such as a photographer.<br> <br> <strong>0-2 Guests</strong><br> <input type="radio" name="wedding_package" value="350|Elopement/Small Private Wedding (Fri-Sun) 0-2 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; "> Friday–Sunday ($350)<br> <input type="radio" name="wedding_package" value="250|Elopement/Small Private Wedding (Mon-Thur) 0-2 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; "> Monday–Thursday ($250)<br> <br> <strong>3-12 Guests</strong><br> <input type="radio" name="wedding_package" value="500|Elopement/Small Private Wedding (Fri-Sun) 3-12 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; "> Friday–Sunday ($500)<br> <input type="radio" name="wedding_package" value="400|Elopement/Small Private Wedding (Mon-Thur) 3-12 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; ;"> Monday–Thursday ($400)<br> <br> <strong>13-25 Guests</strong><br> <input type="radio" name="wedding_package" value="700|Elopement/Small Private Wedding (Fri-Sun) 13-25 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; "> Friday–Sunday ($700)<br> <input type="radio" name="wedding_package" value="550|Elopement/Small Private Wedding (Mon-Thur) 13-25 Guests" onclick="if (!window.__cfRLUnblockHandlers) return false; ;"> Monday – Thursday ($550)<br> <br>
-                               <hr>
-                            </div>
-                            <div id="wedding_only_section">
-                               <h3><a href="/wedding-ceremony-only/">OPTION 2: Wedding Ceremony Only, (Up to 150 Guests)</a></h3>
-                               <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
-                               <em><b>Full Wedding Ceremony Gold Package</b></em><br> Includes chapel, gazebo, grounds, bridal dressing room, officiant services, ceremony music, gazebo chairs, wedding ceremony staff, rehearsal time, and personalized brick to be placed within the path leading to the chapel.<br> <input type="radio" name="wedding_package" value="1200|Wedding Ceremony - Gold (Fri-Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript: included_brick_section_on(); optional_brick_section_off();"> Fri-Sun ($1,200)<br> <input type="radio" name="wedding_package" value="900|Wedding Ceremony - Gold (Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript: included_brick_section_on(); optional_brick_section_off();"> Mon-Thu ($900)<br> <br>  <em><b>Full Wedding Ceremony Silver Package</b></em><br> Includes chapel, gazebo, grounds, bridal dressing room, officiant services, ceremony music, and gazebo chairs.<br> <input type="radio" name="wedding_package" value="1000|Wedding Ceremony - Silver (Fri-Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript: included_brick_section_off(); optional_brick_section_on();"> Fri-Sun ($1,000)<br> <input type="radio" name="wedding_package" value="700|Wedding Ceremony - Silver (Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript: included_brick_section_off(); optional_brick_section_on();"> Mon-Thu ($700)<br> <br> Wedding ceremonies are performed from 9:00 a.m. to 8:00 p.m. , every day of the year, including holidays.<br> <br>
-                               <hr>
-                            </div>
-                            <div id="wedding_rec_section">
-                               <h3><a href="/wedding-ceremony-and-reception/">OPTION 3: Pearl Wedding Ceremony &amp; Reception Package (Up to 150 Guests)</a></h3>
-                               <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
-                               <em><b>Pearl Wedding Package</b></em><br> <em>Wedding</em>: Grounds &amp; Gardens, White Chapel, Garden Gazebo, Professional Wedding Officiant (you may bring your own officiant), Rehearsal (guaranteed the night before), Ceremony Music (indoor and outdoor), White Gazebo Chairs, Personalized Wedding Brick in Bridal Path, Bridal Cottage Dressing Room, Wedding Ceremony Coordinators, Final Cleanup, and use of the grounds for Engagement Pictures.<br> <br> <em>Reception</em>: Venue Setup and Cleanup, Table Linens (white or black), Chair Covers (white or black) &amp; Sashes (many colors), Table Runners, Skirted Tables, Permanent Bridal Party Stage, Stage Up-Lighting, Head Table Spot Lighting, Twin 39” Monitors, Media Projector, Large Permanent Dance Floor, Cake Display Counter, Intimate Lighting Enhancements, Fire Pit, Reception Coordinators, Wedding and Reception Planning, All Buildings Climate Controlled, Paved Lighted Parking, In-house Catering, Quality Disposable Utensils, and Final Cleanup. <br><br> Basic open bar package, and a meal with three entrées and two sides for the first 50 guests. <br> <br> <strong>In Season</strong><br> <input type="radio" name="wedding_package" value="8900|Pearl Package (In-Season Sat)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $8,900 Saturday<br> <input type="radio" name="wedding_package" value="7400|Pearl Package (In-Season Fri &amp; Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $7,400 Friday &amp; Sunday<br> <input type="radio" name="wedding_package" value="5700|Pearl Package (In-Season Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $5,700 Monday - Thursday<br> <br> <strong>Off Season (November 15th thru April 15th)</strong><br> <input type="radio" name="wedding_package" value="7400|Pearl Package (Off-Season Sat)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $7,400 Saturday<br> <input type="radio" name="wedding_package" value="6400|Pearl Package (Off-Season Fri &amp; Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $6,400 Friday &amp; Sunday<br> <input type="radio" name="wedding_package" value="5700|Pearl Package (Off-Season Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $5,700 Monday - Thursday<br> <br> If a Monday through Thursday wedding is on a holiday, pricing is the same as Sunday. If a Sunday wedding is on Memorial Day or Labor Day weekend, pricing is the same as a Saturday. <br> <br>
-                               <hr>
-                            </div>
-                            <div id="banquet_section">
-                               <h3><a href="/wedding-hall-only/">OPTION 4: Ruby Wedding Reception Only (Up to 150 Guests)</a></h3>
-                               <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
-                               <em>Reception</em>: Venue Setup and Cleanup, Table Linens (white or black), Chair Covers (white or black) &amp; Sashes (many colors), Table Runners, Skirted Tables, Permanent Bridal Party Stage, Stage Up-Lighting, Head Table Spot Lighting, Twin 39” Monitors, Media Projector, Large Permanent Dance Floor, Cake Display Counter, Intimate Lighting Enhancements, Fire Pit, Reception Coordinators, Wedding and Reception Planning, All Buildings Climate Controlled, Paved Lighted Parking, In-house Catering, Quality Disposable Utensils, and Final Cleanup.<br><br> Basic open bar package, and a meal with three entrées and two sides for the first 50 guests. <br> <br> <strong>In Season</strong><br> <input type="radio" name="wedding_package" value="8500|Ruby Package (In-Season Sat)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $8,500 Saturday<br> <input type="radio" name="wedding_package" value="7000|Ruby Package (In-Season Fri &amp; Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $7,000 Friday &amp; Sunday<br> <input type="radio" name="wedding_package" value="5300|Ruby Package (In-Season Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $5,300 Monday - Thursday<br> <br> <strong>Off Season (November 15th thru April 15th)</strong><br> <input type="radio" name="wedding_package" value="7000|Ruby Package (Off-Season Sat)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $7,000 Saturday<br> <input type="radio" name="wedding_package" value="6000|Ruby Package (Off-Season Fri &amp; Sun)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $6,000 Friday &amp; Sunday<br> <input type="radio" name="wedding_package" value="5300|Ruby Package (Off-Season Mon-Thur)" onclick="if (!window.__cfRLUnblockHandlers) return false; "> $5,300 Monday - Thursday<br> <br> If a Monday through Thursday wedding is on a holiday, pricing is the same as Sunday. If a Sunday wedding is on Memorial Day or Labor Day weekend, pricing is the same as a Saturday. <br> <br>
-                               <hr>
-                            </div>
-                            <div id="make_payment_section">
-                               <h3><a href="#">OPTION 5: Make A Payment</a></h3>
-                               <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
-                            </div>
-                            <h3>Agreed Date</h3>
-                            <input type="text" name="wedding_date" id="wedding_date"> <br>
-                            <hr>
-                            <h3>Agreed Ceremony Start Time</h3>
-                            Please select an agreed ceremony start time, typically 5:15pm:
-                            <select name="wedding_time">
-                               <option value="">Choose...</option>
-                               <option value="9:00AM">9:00 AM</option>
-                               <option value="9:15AM">9:15 AM</option>
-                               <option value="9:30AM">9:30 AM</option>
-                               <option value="9:45AM">9:45 AM</option>
-                               <option value="10:00AM">10:00 AM</option>
-                               <option value="10:15AM">10:15 AM</option>
-                               <option value="10:30AM">10:30 AM</option>
-                               <option value="10:45AM">10:45 AM</option>
-                               <option value="11:00AM">11:00 AM</option>
-                               <option value="11:15AM">11:15 AM</option>
-                               <option value="11:30AM">11:30 AM</option>
-                               <option value="11:45AM">11:45 AM</option>
-                               <option value="12:00PM">12:00 PM</option>
-                               <option value="12:15PM">12:15 PM</option>
-                               <option value="12:30PM">12:30 PM</option>
-                               <option value="12:45PM">12:45 PM</option>
-                               <option value="1:00PM">1:00 PM</option>
-                               <option value="1:15PM">1:15 PM</option>
-                               <option value="1:30PM">1:30 PM</option>
-                               <option value="1:45PM">1:45 PM</option>
-                               <option value="2:00PM">2:00 PM</option>
-                               <option value="2:15PM">2:15 PM</option>
-                               <option value="2:30PM">2:30 PM</option>
-                               <option value="2:45PM">2:45 PM</option>
-                               <option value="3:00PM">3:00 PM</option>
-                               <option value="3:15PM">3:15 PM</option>
-                               <option value="3:30PM">3:30 PM</option>
-                               <option value="3:45PM">3:45 PM</option>
-                               <option value="4:00PM">4:00 PM</option>
-                               <option value="4:15PM">4:15 PM</option>
-                               <option value="4:30PM">4:30 PM</option>
-                               <option value="4:45PM">4:45 PM</option>
-                               <option value="5:00PM">5:00 PM</option>
-                               <option value="5:15PM">5:15 PM</option>
-                               <option value="5:30PM">5:30 PM</option>
-                               <option value="5:45PM">5:45 PM</option>
-                               <option value="6:00PM">6:00 PM</option>
-                               <option value="6:15PM">6:15 PM</option>
-                               <option value="6:30PM">6:30 PM</option>
-                               <option value="6:45PM">6:45 PM</option>
-                               <option value="7:00PM">7:00 PM</option>
-                               <option value="7:15PM">7:15 PM</option>
-                               <option value="7:30PM">7:30 PM</option>
-                               <option value="7:45PM">7:45 PM</option>
-                               <option value="8:00PM">8:00 PM</option>
-                            </select>
-                            <br>
+
                             <div id="included_brick_option">
                                <hr>
                                <h3>Included Options:</h3>
