clean up process

--- a/CIP/index.html
+++ b/CIP/index.html
@@ -188,10 +188,9 @@
 
   </div>
 
-  <!-- <script src="https://unpkg.com/vue-router"></script> -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"></script>
   <script src="packages.js"></script>
-  <script src="app.js?v=1.0100000000000000020000202"></script>
+  <script src="app.js?v=1.01A"></script>
 </body>
 </html>
