order num integration non-ajax

--- a/CIP/index.html
+++ b/CIP/index.html
@@ -215,7 +215,7 @@
       </div>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"></script>
-      <script src="packages.js"></script>
+      <script src="packages.js?v=1.01A"></script>
       <script>
         Cart.order_num = "1234567";
       </script>
