--- a/CIP/index.html
+++ b/CIP/index.html
@@ -25,7 +25,7 @@
                            <div id="form" v-if="show_form">
                               <!-- name & summary -->
                               <h3><a v-bind:href="package.url">{{cart.summaries[0].label}}</a></h3>
-                              <h4>Please fill out the form below in the order they appear. Try not to use autocomeplte as it may cause problems.</h4>
+                              <h4>Please fill out the form below in the order they appear. Try not to use auto-comeplete as it may cause problems.</h4>
                               <div class="package_summary" v-html="package.summary"></div>
                               <!-- pricing -->
                               <div class="tier" v-for="(v,i) in package.tier">
@@ -39,7 +39,7 @@
                               <input type="date" name="wedding_date" v-model="cart.entries.date">
                               <!-- start time -->
                               <h3>Agreed Ceremony Start Time</h3>
-                              <small> Please select an agreed ceremony start time, typically 5:15pm: </small>
+                              <small> Please select an agreed ceremony start time: </small>
                               <select v-model="cart.entries.start_time">
                                  <option>Choose a timeslot...</option>
                                  <option v-for="timeslot in timeslots">{{timeslot}}</option>
@@ -65,13 +65,13 @@
                               <div id="optional_brick_container" v-show="package.show_bricks">
                                  <h3>Buy A Brick</h3>
                                  <p>Buy a brick to celebrate an important event in your life, whether it is your wedding day, anniversary, birthday, or memory of someone, etc. you choose what you want engraved on your brick. Your brick will be set into the winding brick pathway, or purchase an extra brick for your home. Each brick is 4" x 8"</p>
-                                 <p>Please indicate what you want on your brick, use up to 3 lines, 14 characters per line.</p>
+                                 <p>Please indicate what you want on your brick, use up to 3 lines, 20 characters per line.</p>
                                  <p>Row #1 <small><em>Example: Anderson</em></small></p>
-                                 <input type="text" name="extra_brick_row1" maxlength="14" v-model="cart.entries.brick_1" v-on:change="vUpdateBrickRows">
+                                 <input type="text" name="extra_brick_row1" maxlength="20" v-model="cart.entries.brick_1" v-on:change="vUpdateBrickRows">
                                  <p> Row #2 <small><em>Example: John &amp; Sandy</em></small></p>
-                                 <input type="text" name="extra_brick_row2" maxlength="14" v-model="cart.entries.brick_2" v-on:change="vUpdateBrickRows">
+                                 <input type="text" name="extra_brick_row2" maxlength="20" v-model="cart.entries.brick_2" v-on:change="vUpdateBrickRows">
                                  <p> Row #3 <small><em>Example: 5/10/2016</em></small></p>
-                                 <input type="text" name="extra_brick_row3" maxlength="14" v-model="cart.entries.brick_3" v-on:change="vUpdateBrickRows">
+                                 <input type="text" name="extra_brick_row3" maxlength="20" v-model="cart.entries.brick_3" v-on:change="vUpdateBrickRows">
                               </div>
                               <!-- contact info -->
                               <h3>Contact Information</h3>
@@ -214,7 +214,7 @@
          </div>
       </div>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
       <script src="packages.js?v=1.01A"></script>
       <script>
         Cart.order_num = "1234567";
